--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             position: absolute;
             width: 50px;
             height: 50px;
-            background: url('https://github.com/THEEUS24/foto-tulipa/blob/main/10077585.png') no-repeat center center/contain;
+            background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRvUSNPZTr1Nve_XOADY25yDYRLHx15PJv1zXKe5fyX6Q_DRxpXeVDKnQU&s=10') no-repeat center center/contain;
             opacity: 0;
             animation: floatUp 2s ease-in-out forwards;
         }
