--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="container">
         <h1>Feliz Dia dos Namorados, Minha Tulipinha!</h1>
         <p>Para a pessoa mais especial do mundo, que me faz feliz todos os todos os dias. Eu amo mais do que palavras podem expressar.</p>
-        <p class="heart">❤️</p>
+        <p class="heart">🩷🌷</p>
         <button class="button" onclick="showTulips()">Clique aqui</button>
         <div id="tulip-container"></div>
     </div>
